Fixed minor UI Issues * Fixed the resizing and caption movement on the carousel mostly * Fixed the tables in the UAP and gave them padding * Fixed login and register pages at lover resolutions * Fixed whitespace beneath the carousel when it was dragged in from sides * Fixed the bottom icons at smaller sizes * Made the About and contact pages nicer * Fixed the profile photo, and made it adapt to size * Aligned an incorrect login error message

--- a/Web_Assignment/Content/Site.css
+++ b/Web_Assignment/Content/Site.css
@@ -63,7 +63,7 @@ tr:hover {
     background-color: black;
     opacity:0.65;
     background: linear-gradient(to right, rgba(0,0,0,0),  rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,0));
-    margin-bottom:90px;
+    margin-bottom:60px;
 }
 
 .imgCss {
